Refactoring the code for improvement with new knowledge.